# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("thread_test") {
    sources = [
        "main.c",
        "wheel_codec.c",
        "hal_iot_gpio_ex.c",
        "robot_l9110s.c",
        "PID.c",
        "./sensor/LC_307.c",
        "./sensor/mpu6050.c",
        "car.c",
        "algorithm/coordinate.c",
        "algorithm/a_star.c",
        "algorithm/map.c",
        "sensor/dtof_uart.c",
        "algorithm/avoid.c",
        "communication/state.c",
        "communication/udp_com.c",
        "wifi/wifi_connect.c"
    ]

    include_dirs = [
            "./",
            "//third_party/musl/include",
            "//kernel/liteos_m/kal/cmsis",
            "//foundation/communication/wifi_lite/interfaces/wifiservice",
            "//third_party/ssd1306",
            "//applications/sample/wifi-iot/app/thread_test/sensor",
            "//applications/sample/wifi-iot/app/thread_test",
            "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include",
            "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
            "//base/iot_hardware/peripheral/interfaces/kits",
            "//utils/native/lite/include",
            "//device/hisilicon/hispark_pegasus/hi3861_adapter/kal/cmsis",
            "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals",
            "//applications/sample/wifi-iot/app/thread_test/algorithm",
            "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/include",
            "//applications/sample/wifi-iot/app/thread_test/communication",
            "//foundation/communication/wifi_lite/interfaces/wifiservice",
            "wifi"
        ]

    deps = [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
}
